<resources>
    <string name="app_name">Music App</string>
    <string name="title_activity_payments">Payments</string>
    <string name="all_songs_title">All Songs</string>
    <string name="playlist">Playlist</string>
    <string name="store">Store</string>
    <string name="recent">Recent</string>
    <string name="song_title">Name of the current song on track</string>
    <string name="artist">Artist of the current song</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="album_art">Album Art</string>
    <string name="recent_art">Recent Art</string>
    <string name="playlist_art">Playlist Art</string>
    <string name="store_art">Store Art</string>
    <string name="open">Open</string>
    <string name="all_songs">All Songs</string>
    <string name="track_art">Track Art</string>
    <string name="now_playing">Now Playing</string>
    <string name="song_details">Song Details</string>
    <string name="now_playing_desc">This is the Now Playing Screen. The currently playing song is shown here. Including the control buttons for the song</string>
    <string name="playlist_screen_disc">This is the Screen which displays the playlist in the Music App. It displays a list of songs that are added to a specific playlist</string>
    <string name="recent_screen_disc">This is the Screen which displays the Recently played songs in the Music App.</string>
    <string name="back_to_main_screen">Back to Main Screen</string>
    <string name="store_screen_disc">This is the Payments Page where a user can purchase Music from the app. The app can use Google Pay API to accept payments from the user. Google Pay API is easy to integrate and official payments</string>
    <string name="all_songs_screen_disc">This page displays a list of all the songs available in the device storage</string>
    <string name="current_playing_song_name">Current Playing Song Name</string>
    <string name="xyz_artist">XYZ Artist</string>
    <string name="loop_image">loop image</string>
    <string name="previous_image">previous Image</string>
    <string name="play_image">play Image</string>
    <string name="next_image">next Image</string>
    <string name="shuffle_image">shuffle image</string>
</resources>
