<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NowPlaying">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/AppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/activity_now_playing_toolbar"
            style="@style/ToolbarStyle"
            android:gravity="center_horizontal"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/title_activity_now_playing"
            app:titleMarginStart="32dp">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/song_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp"
        android:text="@string/current_song_title"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AppBar" />

    <TextView
        android:id="@+id/song_artist_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center_horizontal"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="5dp"
        android:text="@string/xyz_artist"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/song_title_tv" />

    <ImageView
        android:id="@+id/album_art_iv"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/album_art"
        android:scaleType="centerCrop"
        android:src="@drawable/track"
        app:layout_constraintTop_toBottomOf="@+id/song_artist_tv" />

    <TextView
        android:id="@+id/now_playing_desc"
        style="@style/DescriptionTextViewStyle"
        android:text="@string/now_playing_description"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/album_art_iv" />

    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/now_playing_desc" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seek_bar">

        <ImageView
            android:id="@+id/loop"
            style="@style/ControlButtons"
            android:contentDescription="@string/loop_image"
            android:src="@drawable/loop" />

        <ImageView
            android:id="@+id/previous"
            style="@style/ControlButtons"
            android:contentDescription="@string/previous_image"
            android:src="@drawable/previous" />

        <ImageView
            android:id="@+id/play"
            style="@style/ControlButtons"
            android:contentDescription="@string/play_image"
            android:src="@drawable/play" />

        <ImageView
            android:id="@+id/next"
            style="@style/ControlButtons"
            android:contentDescription="@string/next_image"
            android:src="@drawable/next" />

        <ImageView
            android:id="@+id/shuffle"
            style="@style/ControlButtons"
            android:contentDescription="@string/shuffle_image"
            android:src="@drawable/shuffle" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>